--- a/backend/src/test/resources/application.properties
+++ b/backend/src/test/resources/application.properties
@@ -1,4 +1,4 @@
 # URL for the "production" database
-spring.datasource.url=jdbc:mysql://localhost:3306/platform_shooter
+spring.datasource.url=jdbc:mysql://localhost:3306/platform_shooter_test
 spring.datasource.username=${DB_USERNAME}
 spring.datasource.password=${DB_PASSWORD}
